--- a/index.html
+++ b/index.html
@@ -9,12 +9,7 @@
         <h1>hello my name is brandon and this is my webpage. 
         </h1>
         <h2> my work from coding class</h2>
-        https://www.khanacademy.org/computer-programming/brandons-stufff/4562403781607424/5407742273880064.
-        pnghttps://www.khanacademy.org/computer-programming/brandons-new-program/4744351454691328
-       <iframe src="https://scratch.mit.edu/projects/300083983/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        <iframe src="https://scratch.mit.edu/projects/300078667/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        <iframe src="https://scratch.mit.edu/projects/292372040/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        <iframe src="https://scratch.mit.edu/projects/289567679/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
-        <iframe src="https://scratch.mit.edu/projects/286238078/embed" allowtransparency="true" width="485" height="402" frameborder="0" scrolling="no" allowfullscreen></iframe>
+        <a href ="http://brandthegod.github.io/scratch-games.html">Scratch Games </a>
+        
     </body>
 </html>
